--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-  <a id="trackEvent">Rastrear Evento</a>
+  <a id="trackSimpleEvent">Rastrear Evento Simple</a>
+
+  <a id="trackEvent">Rastrear Evento con Parametros</a>
 
   <script src="assets/app.js" type="module"></script>
 
