--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,10 @@
             <label for="password" class="form-label mt-4">Contraseña</label>
             <input type="password" class="form-control" id="password" placeholder="Código de acceso" required>
           </div>
+          <div class="form-group">
+            <label for="confirmPassword" class="form-label mt-4">Confirmar Contraseña</label>
+            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirmar código de acceso" required>
+          </div>
           </form>
         </div>
         <div class="modal-footer">
