Fix for account and session management

--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,8 @@
         <div class="modal-body">
           <form action="#" method="post">
             <input type="hidden" id="id">
+            <input type="hidden" id="uid">
+            <input type="hidden" id="profile">
             <div class="form-group">
               <div class="form-group">
                 <label class="col-form-label col-form-label" for="name">Nombre Completo</label>
