--- a/public/index.html
+++ b/public/index.html
@@ -195,9 +195,9 @@
 
   <script src="assets/js/firebase.js" type="module"></script>
   <script src="assets/js/fontawesome.min.js" type="module"></script>
-  <script src="assets/js/jquery-3.6.0.min.js" type=" module"></script>
+  <script src="assets/js/jquery-3.6.0.min.js" type="text/javascript"></script>
   <script src="assets/js/bootstrap.min.js" type="module"></script>
-  <script src="assets/js/sweetalert.min.js" type="module"></script>
+  <script src="assets/js/sweetalert.min.js" type="text/javascript"></script>
   <script src="assets/js/account.js" type="module"></script>
 
 </body>
