--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
         <div class="modal-body">
           <form action="#" method="post">
             <input type="hidden" id="id">
-            <input type="hidden" id="uid">
+            <input type="hidden" id="token">
             <input type="hidden" id="profile">
             <div class="form-group">
               <div class="form-group">
