--- a/public/index.html
+++ b/public/index.html
@@ -24,23 +24,23 @@
             <div class="card-header text-center">Header</div>
             <div class="card-body">
               <h4 class="card-title">Ingreso a la plataforma</h4>
-              <p class="card-text">
-              <div class="form-group">
-                <label for="email" class="form-label">Correo Electr&oacute;nico</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                  placeholder="john.doe@mail.com">
-                <small id="emailHelp" class="form-text text-muted">
-                  Nombre de usuario registrado
-                </small>
-              </div>
+              <div class="card-text">
+                <div class="form-group">
+                  <label for="email" class="form-label">Correo Electr&oacute;nico</label>
+                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                    placeholder="john.doe@mail.com">
+                  <small id="emailHelp" class="form-text text-muted">
+                    Nombre de usuario registrado
+                  </small>
+                </div>
 
-              <div class="form-group">
-                <label for="password" class="form-label mt-4">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="qwe.123*">
+                <div class="form-group">
+                  <label for="password" class="form-label mt-4">Contraseña</label>
+                  <input type="password" class="form-control" id="password" placeholder="qwe.123*">
+                </div>
               </div>
-              </p>
             </div>
-            <div class="card-footer text-right">
+            <div class="card-footer text-end">
               <button type="submit" class="btn btn-primary">Ingresar</button>
             </div>
           </div>
