Adding console dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
       <div class="col-lg-6 offset-lg-3 mt-5">
         <form method="post" id="login">
           <div class="card border-primary">
-            <div class="card-header text-center">Header</div>
+            <div class="card-header text-center">
+              <span class="fa fa-shop"></span>&nbsp;&nbsp;<span id="title"></span>
+            </div>
             <div class="card-body">
               <h4 class="card-title">Ingreso a la plataforma</h4>
               <div class="card-text">
