--- a/public/console.html
+++ b/public/console.html
@@ -16,6 +16,70 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <span class="fa fa-shop"></span>&nbsp;&nbsp;<span id="title"></span>
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+
+                </ul>
+                <ul class="navbar-nav d-flex">
+                    <li>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#accountModal">
+                            <span class="fa fa-user-astronaut"></span>&nbsp;&nbsp;Mi Cuenta
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="true">
+                            <span class="fa fa-wrench"></span>&nbsp;&nbsp;Administraci&oacute;n</a>
+                        <div class="dropdown-menu" data-bs-popper="static">
+                            <a class="dropdown-item" href="#">
+                                <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <span class="fa fa-users"></span>&nbsp;&nbsp;Clientes</a>
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <span class="fa fa-user-gear"></span>&nbsp;&nbsp;Usuarios</a>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">
+                                <span class="fa fa-basket-shopping"></span>&nbsp;&nbsp;Pedidos</a>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-comments"></span>&nbsp;&nbsp;Chats</a>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-envelope"></span>&nbsp;&nbsp;Contacto</a>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#" id="signOut">
+                            <span class="fa fa-unlock"></span>&nbsp;&nbsp;Salir</a>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div id="loading">
         <div>Cargando...</div>
     </div>
