--- a/public/console.html
+++ b/public/console.html
@@ -80,6 +80,49 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            Ssampel
+        </div>
+    </div>
+
+
+    <!--Modals-->
+    <!-- My Account -->
+    <div class="modal fade" id="accountModal" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Editar Cuenta</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="#" method="post">
+                        <input type="hidden" id="id">
+                        <input type="hidden" id="token">
+                        <input type="hidden" id="profile">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <label class="col-form-label col-form-label" for="name">Nombre Completo</label>
+                                <input class="form-control form-control" type="text" placeholder="Nombre Completo"
+                                    id="name">
+                            </div>
+                            <label for="email" class="form-label mt-4">Correo Electrónico</label>
+                            <input type="email" class="form-control text-muted" id="email" aria-describedby="emailHelp"
+                                required readonly>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Guardar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="loading">
         <div>Cargando...</div>
     </div>
