--- a/public/console.html
+++ b/public/console.html
@@ -37,6 +37,11 @@
                             <span class="fa fa-user-astronaut"></span>&nbsp;&nbsp;Mi Cuenta
                         </a>
                     </li>
+                    <li>
+                        <a class="nav-link" href=" #">
+                            <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
+                        </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="true">
@@ -45,14 +50,9 @@
                             <a class="dropdown-item" href="#">
                                 <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
                             </a>
+
                             <a class="dropdown-item" href="#">
-                                <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <span class="fa fa-users"></span>&nbsp;&nbsp;Clientes</a>
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <span class="fa fa-user-gear"></span>&nbsp;&nbsp;Usuarios</a>
+                                <span class="fa fa-users"></span>&nbsp;&nbsp;Usuarios</a>
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">
@@ -63,11 +63,6 @@
                     <li>
                         <a class="nav-link" href="#">
                             <span class="fa fa-comments"></span>&nbsp;&nbsp;Chats</a>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#">
-                            <span class="fa fa-envelope"></span>&nbsp;&nbsp;Contacto</a>
                         </a>
                     </li>
                     <li>
