--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
               <h4 class="card-title">Ingreso a la plataforma</h4>
               <div class="card-text">
                 <div class="form-group">
-                  <label for="email" class="form-label">Correo Electr&oacute;nico</label>
+                  <label for="email" class="form-label">Correo</label>
                   <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
                     placeholder="john.doe@mail.com">
                   <small id="emailHelp" class="form-text text-muted">
