--- a/public/console.html
+++ b/public/console.html
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <a class="nav-link" href=" #">
-                            <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
+                            <span class="fa fa-basket-shopping"></span>&nbsp;&nbsp;Pedidos</a>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
@@ -48,15 +48,14 @@
                             <span class="fa fa-wrench"></span>&nbsp;&nbsp;Administraci&oacute;n</a>
                         <div class="dropdown-menu" data-bs-popper="static">
                             <a class="dropdown-item" href="#">
-                                <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
-                            </a>
-
-                            <a class="dropdown-item" href="#">
-                                <span class="fa fa-users"></span>&nbsp;&nbsp;Usuarios</a>
+                                <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">
-                                <span class="fa fa-basket-shopping"></span>&nbsp;&nbsp;Pedidos</a>
+                                <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
+                            </a>
+                            <a class="dropdown-item" href="#" id="userMenu">
+                                <span class="fa fa-users"></span>&nbsp;&nbsp;Usuarios</a>
                             </a>
                         </div>
                     </li>
@@ -75,9 +74,44 @@
         </div>
     </nav>
 
-    <div class="container">
+    <!--containers-->
+    <!--dashboardModule-->
+    <div class="container" id="dashboardModule">
         <div class="row">
             Ssampel
+        </div>
+    </div>
+
+    <!--userModule-->
+    <div class="container hide pt-3" id="userModule">
+        <div class="row">
+            <div class="col-8">
+                <h1>Usuarios</h1>
+            </div>
+            <div class="col-4 text-end">
+                <button type="button" id="add" class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#userModal">
+                    <span class="fa fa-plus"></span>&nbsp;&nbsp;Agregar
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-hover table-striped">
+                    <thead class="thead-dark text-center">
+                        <tr>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Correo</th>
+                            <th>Tipo</th>
+                            <th>Token</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
@@ -100,11 +134,10 @@
                         <input type="hidden" id="profile">
                         <div class="form-group">
                             <div class="form-group">
-                                <label class="col-form-label col-form-label" for="name">Nombre Completo</label>
-                                <input class="form-control form-control" type="text" placeholder="Nombre Completo"
-                                    id="name">
+                                <label class="col-form-label col-form-label" for="name">Nombre</label>
+                                <input class="form-control form-control" type="text" placeholder="John Doe" id="name">
                             </div>
-                            <label for="email" class="form-label mt-4">Correo Electrónico</label>
+                            <label for="email" class="form-label mt-4">Correo</label>
                             <input type="email" class="form-control text-muted" id="email" aria-describedby="emailHelp"
                                 required readonly>
                         </div>
@@ -112,6 +145,50 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Guardar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- User -->
+    <div class="modal fade" role="dialog" id="userModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Usuario</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="#" method="post">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="name" placeholder="John Doe" required>
+                            <label for="name">Nombre</label>
+                        </div>
+                        <div class="form-floating mt-4">
+                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                            <label for="email">Correo</label>
+                        </div>
+                        <div class="form-group mt-4">
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="profile">
+                                <label class="form-check-label" for="profile">Administrador</label>
+                            </div>
+                        </div>
+                        <div class="form-floating mt-4">
+                            <input type="password" class="form-control" id="password" placeholder="qwe.123*" required>
+                            <label for="password">Contraseña</label>
+                        </div>
+                        <div class="form-floating mt-4">
+                            <textarea class="form-control" id="token" rows="5"></textarea>
+                            <label for="token">Token</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="save">Guardar</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
@@ -127,7 +204,7 @@
     <script src="assets/js/sweetalert.min.js" type="text/javascript"></script>
     <script src="assets/js/bootstrap.min.js" type="module"></script>
     <script src="assets/js/console.js" type="module"></script>
-
+    <script src="assets/js/users.js" type="module"></script>
 
 </body>
 
