--- a/public/console.html
+++ b/public/console.html
@@ -60,7 +60,7 @@
                         </div>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#" id="chatMenu">
                             <span class="fa fa-comments"></span>&nbsp;&nbsp;Chats</a>
                         </a>
                     </li>
@@ -79,6 +79,18 @@
     <div class="container" id="dashboardModule">
         <div class="row">
             Ssampel
+        </div>
+    </div>
+
+    <!--chatModule-->
+    <div class="container hide pt-3" id="chatModule">
+        <div class="row">
+            <div class="col-4">
+                
+            </div>
+            <div class="col-8">
+
+            </div>
         </div>
     </div>
 
@@ -289,6 +301,7 @@
     <script src="assets/js/console.js" type="module"></script>
     <script src="assets/js/users.js" type="module"></script>
     <script src="assets/js/products.js" type="module"></script>
+    <script src="assets/js/chat.js" type="module"></script>
 
 </body>
 
