--- a/public/console.html
+++ b/public/console.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#" id="dashboardModule">
                 <span class="fa fa-shop"></span>&nbsp;&nbsp;<span id="title"></span>
             </a>
 
@@ -54,7 +54,7 @@
                             <a class="dropdown-item" href="products.html">
                                 <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
                             </a>
-                            <a class="dropdown-item" href="users.html">
+                            <a class="dropdown-item" href="#" id="usersModule">
                                 <span class="fa fa-users"></span>&nbsp;&nbsp;Usuarios</a>
                             </a>
                         </div>
@@ -75,12 +75,8 @@
     </nav>
 
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12" id="wrapper">
+    <div class="container-fluid mt-2" id="wrapper">
 
-            </div>
-        </div>
     </div>
 
     <div id="loading">
