--- a/public/console.html
+++ b/public/console.html
@@ -51,7 +51,7 @@
                                 <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="products.html">
+                            <a class="dropdown-item" href="#" id="productsModule">
                                 <span class="fa fa-wrench"></span>&nbsp;&nbsp;Productos</a>
                             </a>
                             <a class="dropdown-item" href="#" id="usersModule">
