--- a/public/modules/products.html
+++ b/public/modules/products.html
@@ -55,8 +55,8 @@
                     </div>
                     <div class="form-group mt-4">
                         <label for="image">Imagen</label>
-                        <input type="file" class="form-control" id="image" accept="image/*">
-                        <img src="" alt="" id="image">
+                        <input type="file" class="form-control" id="image" accept="image/jpeg">
+                        <img src="" alt="" id="imageLoaded" width="100%" class="mt-2">
                     </div>
                     <div class="form-floating mt-4">
                         <div class="form-check form-switch">
