--- a/public/console.html
+++ b/public/console.html
@@ -47,7 +47,7 @@
                             aria-haspopup="true" aria-expanded="true">
                             <span class="fa fa-wrench"></span>&nbsp;&nbsp;Administraci&oacute;n</a>
                         <div class="dropdown-menu" data-bs-popper="static">
-                            <a class="dropdown-item" href="prices.html">
+                            <a class="dropdown-item" href="#" id="pricesModule">
                                 <span class="fa fa-money-check-dollar"></span>&nbsp;&nbsp;Lista de Precios</a>
                             </a>
                             <div class="dropdown-divider"></div>
