--- a/public/console.html
+++ b/public/console.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="orders.htnml">
+                        <a class="nav-link" href="#" id="ordersModule">
                             <span class="fa fa-basket-shopping"></span>&nbsp;&nbsp;Pedidos</a>
                         </a>
                     </li>
