--- a/public/modules/prices.html
+++ b/public/modules/prices.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-4 text-end">
             <button type="submit" id="save" class="btn btn-primary">
-                <span class="fa fa-plus"></span>&nbsp;&nbsp;Save
+                <span class="fa fa-save"></span>&nbsp;&nbsp;Guardar
             </button>
         </div>
     </div>
